--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/poppins": "^4.5.10",
-    "@metaplex-foundation/js": "^0.18.3",
+    "@metaplex-foundation/js": "^0.19.3",
     "@metaplex-foundation/mpl-token-metadata": "^2.10.0",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
@@ -20,8 +20,20 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "arweave": "^1.13.7",
+    "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
+    "browserify-zlib": "^0.2.0",
+    "chai": "^4.3.7",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "ipfs-http-client": "^60.0.0",
     "jquery": "^3.6.4",
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "net": "^1.0.2",
+    "notistack": "^3.0.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,8 +42,9 @@
     "react-scripts": "5.0.1",
     "react-tiny-popover": "^7.2.4",
     "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4",
-    "zlib": "^1.0.5"
+    "timers-browserify": "^2.0.12",
+    "tls": "^0.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -62,6 +75,7 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
+    "nodemon": "^2.0.22",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "react-app-rewired": "^2.2.1",
