--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   "devDependencies": {
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
+    "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
     "nodemon": "^2.0.22",
@@ -82,5 +83,6 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.0"
-  }
+  },
+  "proxy": "https://api-mainnet.magiceden.dev"
 }
